deployment/production/frontend-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: frontend
  name: frontend
  namespace: production
spec:
  replicas: 2
  selector:
    matchLabels:
      run: frontend
  template:
    metadata:
      labels:
        run: frontend
    spec:
      containers:
      - image: sharor/angular-meetup:1.1.0
        imagePullPolicy: Always
        name: frontend
