deployment/production/arangodb-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: arangodb
  name: arangodb
  namespace: production
spec:
  ports:
  - port: 8529
    targetPort: 8529
  selector:
    run: arangodb
  sessionAffinity: ClientIP
