deployment/production/encoder-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: encoder
  name: encoder
  namespace: production
spec:
  ports:
  - port: 3456
    targetPort: 3456
  selector:
    run: encoder
  sessionAffinity: ClientIP
