deployment/production/wordcounter-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: wordcounter
  name: wordcounter
  namespace: production
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    run: wordcounter
  sessionAffinity: ClientIP
