deployment/production/encoder-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: encoder
  namespace: production
spec:
  rules:
  - host: encoder.org
    http:
      paths:
      - path: /
        backend:
          serviceName: encoder
          servicePort: 3456
