deployment/production/frontend-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
  - host: frontend.org
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 4200
