deployment/production/wordcounter-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordcounter
spec:
  rules:
  - host: wordcounter.org
    http:
      paths:
      - path: /
        backend:
          serviceName: wordcounter
          servicePort: 5000
